--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,13 @@
     <string name="dollar_minus_320">$ -320.00</string>
     <string name="view_more"><u>View more</u></string>
 
+    <string name="harvest_more_benefit">Harvest More Benefit</string>
+    <string name="benefit_description">Find out more about our great value-adding services and products.</string>
+    <string name="click_here">Click here</string>
+    <string name="recommend">Recommended</string>
+    <string name="favourite">Favourite</string>
+    <string name="browse_for_more">Browse for More</string>
+
     <string name="action_settings">Settings</string>
     <string name="menuUsername">工具人</string>
     <string name="sign_out">Sign out</string>
